# FBX-Extension-SDK

./: README.md
CMakeConfig/: CMakeLists.txt  CMakeSettings.txt
CMakeConfig/2013.3-2019.2/3ds Max/: CMakeSettings.txt
CMakeConfig/2013.3-2019.2/CMake_3ds Max/: CMakeLists.txt  CMakeSettings.txt
CMakeConfig/2013.3-2019.2/CMake_Maya/: CMakeSettings.txt
CMakeConfig/2013.3-2019.2/Maya/: CMakeSettings.txt
CMakeConfig/2013.3-2019.2/MayaCMake/: CMakeLists.txt
CMakeConfig/2013.3-2019.2/cmake_3dsmax/: CMakeLists.txt
CMakeConfig/2019.5-2020.x/3ds Max/: CMakeSettings.txt
CMakeConfig/2019.5-2020.x/CMake_Maya/: CMakeSettings.txt
CMakeConfig/2019.5-2020.x/Maya/: CMakeSettings.txt
CMakeConfig/2019.5-2020.x/cmake_3dsmax/: CMakeSettings.txt
Code/: fbxmethod.cxx  fbxmethod.h  maxtemplateplugin.cxx  mayatemplateplugin.cxx
Code/max/: maxtemplateplugin.cxx
Code/maya/: mayafbxmethod.cxx  mayafbxmethod.h  mayatemplateplugin.cxx
